--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "lint": "next lint",
     "test": "jest --watch",
@@ -14,9 +13,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
+    "@types/twilio": "^3.19.3",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "twilio": "^3.78.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.23.1",
@@ -31,7 +36,6 @@
     "@types/testing-library__user-event": "^4.2.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
-    "husky": "^8.0.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
     "prettier": "^2.7.1",
